# carl

./: .gitignore  README.md  Setup.hs  carl.cabal  makefile
src/: Carl.hs
src/Carl/: AlgErr.hs  Algebra.hs  Bool.hs  Canon.hs  Data.hs  Either.hs  List.hs  Monad.hs  Orders.hs  Pair.hs  String.hs  Struct.hs  Write.hs
src/Carl/Algebra/: Group.hs  Ring.hs
src/Carl/Data/: GF2.hs  Monomial.hs  Natural.hs  QuadRat.hs  Rat.hs  ZZMod.hs
src/Carl/Struct/: Matrix.hs  Permutation.hs  Polynomial.hs  Tuple.hs
src/Carl/Write/: LaTeX.hs  Unicode.hs
test/Tests/: Main.hs  Util.hs
test/Tests/Lib/: Group.hs  Ring.hs
test/Tests/Lib/Data/: GF2.hs  Integer.hs  Rat.hs  ZZModulo.hs
test/Tests/Lib/Struct/: Matrix.hs  Permutation.hs  Polynomial.hs
